# data-engineering-exercise

./: .gitignore  main.py  pyproject.toml  sales_sample.csv
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
airflow/: airflow.cfg  simple_auth_manager_passwords.json.generated
airflow/dags/: error_handling.py  sales_pipeline.py
sales_analytics/: .user.yml  dbt_project.yml  profiles.yml
sales_analytics/models/: schema.yaml  source.yml
sales_analytics/models/analytics/: fact_sales.sql  kpi_summary.sql  sales_by_category.sql  sales_by_region.sql
sales_analytics/models/staging/: stg_sales_data.sql
sales_analytics/tests/: row_count_positive.sql
